Changes in Version 2.5-45 (2020-08-24)
=====================================

   o the metafor package now makes use of the 'mathjaxr' package to nicely
     render equations shown in the HTML help pages

   o added 'weighted' argument to fsn() (for Orwin's method)

   o added some more transformation functions

   o added tes() function for the test of excess significance

   o added rcalc(), matreg(), dfround(), and vec2mat() functions

   o bldiag() now properly handles ?x0 or 0x? matrices

   o p-values are still given to 2 digits when 'digits = 1'

   o summary.escalc() also provides the p-values (of the Wald-type tests); but
     when using the 'transf' argument, the sampling variances, standard
     errors, test statistics, and p-values are no longer shown

   o rma.uni() no longer constrains a fixed tau2 value to 0 when k=1

   o started using the 'pbapply' package for showing progress bars, also when
     using parallel processing

   o to avoid potential confusion, all references to 'credibility intervals'
     have been removed from the documentation; these intervals are now
     exclusively referred to as 'prediction intervals'; in the output, the
     bounds are therefore indicated now as 'pi.lb' and 'pi.ub' (instead of
     'cr.lb' and 'cr.ub'); the corresponding argument names were changed in
     addpoly.default(); argument 'addcred' was changed to 'addpred' in
     addpoly.rma() and forest.rma(); however, code using the old arguments
     names should continue to work

   o vif() gains 'btt' argument and can now also compute generalized variance
     inflation factors; a proper print.vif.rma() function was added

   o in the various forest() functions, when 'header=TRUE', suppress the right
     header when 'annotate=FALSE'

   o the 'forest' and 'funnel' arguments of reporter.rma.uni() can now also be
     logicals to suppress the drawing of these plots

   o one can now use weights(..., type="rowsum") for intercept-only 'rma.mv'