@@ -135,6 +135,7 @@
 </h1>
 <ul>
 <li><p>the <code>metafor</code> package now makes use of the <code>mathjaxr</code> package to nicely render equations shown in the HTML help pages</p></li>
+<li><p><code><a href="../reference/simulate.rma.html">simulate.rma()</a></code> gains <code>yilim</code> argument</p></li>
 <li><p>added <code>weighted</code> argument to <code><a href="../reference/fsn.html">fsn()</a></code> (for Orwin’s method)</p></li>
 <li><p>added some more transformation functions</p></li>
 <li><p>added <code><a href="../reference/tes.html">tes()</a></code> function for the test of excess significance</p></li>
