@@ -3,5 +3,5 @@ pkgdown: 1.5.1
 pkgdown_sha: ~
 articles:
   diagram: pkgdown/diagram.html
-last_built: 2020-08-24T14:46Z
+last_built: 2020-08-24T18:31Z
 
