@@ -176,11 +176,11 @@
 <span class='co'>### mixed-effects meta-regression model</span>
 <span class='no'>res</span> <span class='kw'>&lt;-</span> <span class='fu'><a href='rma.uni.html'>rma</a></span>(<span class='no'>yi</span>, <span class='no'>vi</span>, <span class='kw'>mods</span> <span class='kw'>=</span> ~ <span class='no'>ablat</span> + <span class='no'>alloc</span>, <span class='kw'>data</span><span class='kw'>=</span><span class='no'>dat</span>)
 <span class='fu'>formula</span>(<span class='no'>res</span>, <span class='kw'>type</span><span class='kw'>=</span><span class='st'>"mods"</span>)</div><div class='output co'>#&gt; ~ablat + alloc
-#&gt; &lt;environment: 0x10378000&gt;</div><div class='input'>
+#&gt; &lt;environment: 0x12af4488&gt;</div><div class='input'>
 <span class='co'>### specify moderators via 'yi' argument</span>
 <span class='no'>res</span> <span class='kw'>&lt;-</span> <span class='fu'><a href='rma.uni.html'>rma</a></span>(<span class='no'>yi</span> ~ <span class='no'>ablat</span> + <span class='no'>alloc</span>, <span class='no'>vi</span>, <span class='kw'>data</span><span class='kw'>=</span><span class='no'>dat</span>)
 <span class='fu'>formula</span>(<span class='no'>res</span>, <span class='kw'>type</span><span class='kw'>=</span><span class='st'>"yi"</span>)</div><div class='output co'>#&gt; yi ~ ablat + alloc
-#&gt; &lt;environment: 0x11cbc820&gt;</div></pre>
+#&gt; &lt;environment: 0x109072d0&gt;</div></pre>
   </div>
   <div class="col-md-3 hidden-xs hidden-sm" id="pkgdown-sidebar">
     <nav id="toc" data-toggle="toc" class="sticky-top">
