@@ -6,12 +6,13 @@
    The function simulates effect sizes or outcomes based on \code{"rma"} model object.
 }
 \usage{
-\method{simulate}{rma}(object, nsim = 1, seed = NULL, \dots)
+\method{simulate}{rma}(object, nsim = 1, seed = NULL, yilim, \dots)
 }
 \arguments{
    \item{object}{an object of class \code{"rma"}.}
    \item{nsim}{number of response vectors to simulate (defaults to 1).}
    \item{seed}{an object specifying if and how the random number generator should be initialized (\sQuote{seeded}). Either \code{NULL} or an integer that will be used in a call to \code{set.seed} before simulating the response vectors. If set, the value is saved as the \code{"seed"} attribute of the returned value. The default, \code{NULL} will not change the random generator state, and return \code{\link{.Random.seed}} as the \code{"seed"} attribute; see \sQuote{Value}.}
+   \item{yilim}{limits for the simulated values. If unspecified, no limits are used.}
    \item{\dots}{other arguments.}
 }
 \details{
@@ -21,6 +22,9 @@
    A data frame with \code{nsim} columns with the simulated effect sizes or outcomes.
 
    The data frame comes with an attribute \code{"seed"}. If argument \code{seed} is \code{NULL}, the attribute is the value of \code{\link{.Random.seed}} before the simulation was started; otherwise it is the value of the \code{seed} argument with a \code{"kind"} attribute with value \code{as.list(RNGkind())}.
+}
+\note{
+   If the outcome measure used for the analysis is bounded (e.g., correlations are bounded between \code{-1} and \code{1}, proportions are bounded between \code{0} and \code{1}), one can use the \code{yilim} argument to enforce those limits when simulating values (simulated values cannot exceed those bounds then).
 }
 \author{
    Wolfgang Viechtbauer \email{wvb@metafor-project.org} \url{http://www.metafor-project.org}
