@@ -4,6 +4,8 @@ Changes in Version 2.5-45 (2020-08-24)
    o the metafor package now makes use of the 'mathjaxr' package to nicely
      render equations shown in the HTML help pages
 
+   o simulate.rma() gains 'yilim' argument
+
    o added 'weighted' argument to fsn() (for Orwin's method)
 
    o added some more transformation functions
